# FastAPITutorial

./: .gitignore  config.py  pyproject.toml  readme.md  tasks.py  worker.py
fastapitutorial/: __init__.py
