[tool.poetry]
name = "fastapitutorial"
version = "0.1.0"
description = "FastAPI framework, high performance, easy to learn, fast to code, ready for production"
authors = ["hywell <opencoding@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.52.0"
uvicorn = "^0.11.3"
daphne = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
